--- a/src/components/z-input/styles-general.css
+++ b/src/components/z-input/styles-general.css
@@ -19,7 +19,7 @@ textarea,
 .textarea-wrapper {
   box-sizing: border-box;
   border: var(--border-size-small) solid var(--gray700);
-  background: var(--color-input-field01);
+  background: var(--color-form-background);
   border-radius: var(--border-radius-small);
   color: var(--gray900);
   fill: var(--gray900);
