--- a/src/components/z-input/styles-general.css
+++ b/src/components/z-input/styles-general.css
@@ -50,7 +50,7 @@ textarea,
 
 input:focus:focus-visible,
 textarea:focus:focus-visible {
-  color: var(--color-input-field02);
+  color: var(--color-primary01);
 }
 
 :host.active-select input {
