--- a/src/components/z-info-reveal/styles.css
+++ b/src/components/z-info-reveal/styles.css
@@ -75,6 +75,7 @@ button:focus:focus-visible {
 
 .z-info-reveal-panel {
   position: absolute;
+  z-index: 99;
   display: flex;
   width: var(--z-info-reveal-panel-width);
   height: fit-content;
