--- a/src/components/file-upload/z-dragdrop-area/styles.css
+++ b/src/components/file-upload/z-dragdrop-area/styles.css
@@ -1,39 +1,31 @@
 :host {
+  position: relative;
+  display: flex;
+  height: 220px;
+  flex-direction: column;
+  align-items: center;
+  padding: calc(var(--space-unit) * 3);
+  border: var(--border-size-medium) dashed var(--color-active-surface);
+  background-color: var(--color-surface02);
+  border-radius: var(--border-radius-small);
+  color: var(--color-default-text);
   font-family: var(--font-family-sans);
   font-weight: var(--font-rg);
 }
 
-:host > .dragdrop {
-  position: relative;
-  display: flex;
-  height: 228px;
-  flex-direction: column;
-  padding: calc(var(--space-unit) * 2);
-  border-color: var(--color-surface04);
-  background-color: var(--color-background);
-
-  /* Native CSS properties don't support the customization of border-style.
-  Therefore, we use a trick with an SVG image inside background-image property.
-  The SVG features give us the ability to change the distance between dashed lines, set custom pattern, add dash offset or even change a line cap.
-  Generated SVG image is vector and it fills width and height of elements by 100%, so it doesn't matter what size elements have. */
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='2' ry='2' stroke='%23CACCCEFF' stroke-width='2' stroke-dasharray='15%2c 10%2c 14%2c 11' stroke-dashoffset='3' stroke-linecap='square'/%3e%3c/svg%3e");
-  border-radius: 2px;
-  color: var(--color-default-text);
-}
-
-:host > .dragdrop:focus-visible {
-  box-shadow: var(--shadow-focus-primary);
-  outline: none !important;
+:host,
+* {
+  box-sizing: border-box;
 }
 
 /* https://stackoverflow.com/questions/7110353/html5-dragleave-fired-when-hovering-a-child-element */
-:host > .dragdrop.dragover * {
+:host(.dragover) * {
   pointer-events: none;
 }
 
-:host > .dragdrop .dragover-container {
+.dragover-container {
   position: absolute;
-  z-index: 10;
+  z-index: 1;
   top: 0;
   left: 0;
   display: none;
@@ -43,13 +35,7 @@
   box-shadow: var(--shadow-focus-primary);
 }
 
-:host > .dragdrop .dragover-container .dragover-message {
-  padding: 10px 28px;
-  background-color: var(--color-primary01);
-  color: var(--color-text-inverse);
-}
-
-:host > .dragdrop.dragover .dragover-container {
+:host(.dragover) .dragover-container {
   display: flex;
   align-items: center;
   justify-content: center;
