--- a/src/components/book-card/z-book-card/styles.css
+++ b/src/components/book-card/z-book-card/styles.css
@@ -72,6 +72,7 @@
   -webkit-line-clamp: 1;
   line-clamp: 1;
   text-overflow: ellipsis;
+  word-break: break-all;
 }
 
 :host > article .main-content .card-info .book-data .authors-title-cta-section .opera-title {
@@ -101,6 +102,7 @@
   -webkit-line-clamp: 1;
   line-clamp: 1;
   text-overflow: ellipsis;
+  word-break: break-all;
 }
 
 :host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .isbn {
@@ -111,6 +113,7 @@
   -webkit-line-clamp: 1;
   line-clamp: 1;
   text-overflow: ellipsis;
+  word-break: break-all;
 }
 
 :host > article .main-content .card-info .book-data .isbn-tags-link-section .isbn-tags-section .tags {
