--- a/src/components/z-input/styles-checkbox-radio.css
+++ b/src/components/z-input/styles-checkbox-radio.css
@@ -4,14 +4,14 @@
   display: inline-flex;
   flex-direction: row;
   align-items: center;
-  color: var(--color-default-text);
-  fill: var(--color-primary01);
+  color: var(--color-form-default-text);
+  fill: var(--color-form-active-primary);
   font-family: var(--font-family-sans);
 }
 
 .radio-wrapper:hover,
 .checkbox-wrapper:hover {
-  color: var(--color-hover-primary);
+  color: var(--color-form-hover-primary);
   fill: currentcolor;
 }
 
@@ -120,11 +120,11 @@
 /* disabled */
 .radio-wrapper > input:disabled + .radio-label,
 .checkbox-wrapper > input:disabled + .checkbox-label {
-  color: var(--color-disabled03);
+  color: var(--color-form-disabled-text);
 }
 
 .radio-wrapper > input:disabled + .radio-label > z-icon,
 .checkbox-wrapper > input:disabled + .checkbox-label > z-icon {
   cursor: default;
-  fill: var(--color-disabled01);
+  fill: var(--color-form-disabled01-icon);
 }
