--- a/src/components/z-input/styles-textarea.css
+++ b/src/components/z-input/styles-textarea.css
@@ -1,28 +1,27 @@
 .textarea-wrapper {
+  width: 100%;
+  height: 100%;
   padding: calc(var(--space-unit) * 1.5);
-
-  /* Firefox scrollbar */
-  scrollbar-color: var(--color-primary01) transparent;
 }
 
 textarea::-webkit-scrollbar {
-  width: 10px;
-  background: linear-gradient(to right, transparent 0 3px, var(--gray200) 3px 7px, transparent 7px 10px);
-  border-radius: var(--border-radius);
-}
-
-textarea::-webkit-scrollbar-track {
-  background-color: transparent;
+  width: 6px;
+  background: linear-gradient(to right, transparent 0 1px, var(--gray200) 1px 5px, transparent 5px 6px);
 }
 
 textarea::-webkit-scrollbar-thumb {
-  width: 10px;
   background-color: var(--color-primary01);
-  border-radius: var(--border-radius);
 }
 
 textarea::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-hover-primary);
+}
+
+/* Firefox scrollbar */
+@supports not selector(textarea::-webkit-scrollbar-track) {
+  textarea {
+    scrollbar-color: var(--color-primary01) transparent;
+  }
 }
 
 textarea {
@@ -31,5 +30,6 @@ textarea {
   padding: 0;
   border: none;
   margin: 0;
+  color: currentcolor;
   resize: none;
 }
