--- a/src/components/z-anchor-navigation/styles.css
+++ b/src/components/z-anchor-navigation/styles.css
@@ -57,7 +57,7 @@ z-anchor-navigation nav > * {
 
 z-anchor-navigation nav > [data-current] {
   border-left-color: var(--color-primary01);
-  color: var(--color-text-link-blue);
+  color: var(--color-primary01);
   font-weight: var(--font-sb);
 }
 
@@ -106,8 +106,8 @@ z-anchor-navigation nav button {
 
     z-anchor-navigation nav > *:hover {
       border-left-color: var(--color-hover-primary);
-      background-color: var(--color-hover-surface);
-      color: var(--color-text-link-blue-hover);
+      background-color: var(--color-surface02);
+      color: var(--color-hover-primary);
     }
   }
 
