--- a/src/components/z-pagination/styles.css
+++ b/src/components/z-pagination/styles.css
@@ -45,7 +45,7 @@ z-pagination .pagination-bar button {
   justify-content: center;
   border: none;
   margin: 0;
-  background-color: var(--color-surface03);
+  background-color: var(--color-surface02);
   color: var(--color-primary01);
   cursor: pointer;
   font-family: inherit;
@@ -59,8 +59,7 @@ z-pagination .pagination-bar button {
 }
 
 z-pagination .pagination-bar button:focus-visible {
-  background-color: var(--color-hover-surface);
-  box-shadow: inset var(--shadow-focus-primary);
+  background-color: var(--color-surface01);
   outline: none;
 }
 
@@ -77,9 +76,9 @@ z-pagination .pagination-bar .navigation-button {
 
 z-pagination .pagination-bar .pagination-button:disabled,
 z-pagination .pagination-bar .navigation-button:disabled {
-  background-color: var(--color-disabled01);
   color: var(--color-disabled03);
   cursor: default;
+  fill: var(--color-disabled03);
   pointer-events: none;
 }
 
@@ -115,10 +114,6 @@ z-pagination .pagination-bar .page-button {
   border-bottom: var(--border-size-large) solid transparent;
   font-size: var(--font-size-2);
   font-weight: var(--font-sb);
-}
-
-z-pagination .pagination-bar .page-button:focus-visible {
-  border-bottom-color: var(--color-hover-light);
 }
 
 z-pagination .pagination-bar .page-button[data-current] {
@@ -158,7 +153,7 @@ z-pagination .mobile-go-to-page {
   flex: 1 auto;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-surface03);
+  background-color: var(--color-surface02);
 }
 
 z-pagination .mobile-go-to-page z-input {
@@ -181,11 +176,12 @@ z-pagination .mobile-go-to-page > span {
 
 @media (hover: hover) {
   z-pagination .pagination-bar button:hover {
-    background-color: var(--color-hover-surface);
+    background-color: var(--color-surface01);
   }
 
   z-pagination .pagination-bar .page-button:hover {
-    border-bottom-color: var(--color-hover-light);
+    border-bottom-color: var(--color-hover-primary);
+    color: var(--color-hover-primary);
   }
 }
 
