--- a/src/components/z-anchor-navigation/index.stories.css
+++ b/src/components/z-anchor-navigation/index.stories.css
@@ -21,13 +21,17 @@
   right: 8px;
 }
 
+.z-anchor-navigation-story-wrapper .section {
+  color: var(--color-default-text);
+}
+
 .z-anchor-navigation-manual-current {
   position: sticky;
   top: 0;
   display: flex;
   padding: 8px 0 16px;
   margin-bottom: calc(var(--space-unit) * 3);
-  background: #fff;
+  background: var(--color-surface01);
   column-gap: calc(var(--space-unit) * 2);
 }
 
