--- a/src/components/z-anchor-navigation/styles.css
+++ b/src/components/z-anchor-navigation/styles.css
@@ -21,12 +21,15 @@ z-anchor-navigation nav a {
   box-sizing: border-box;
   padding: calc(var(--space-unit) * 1.5) calc(var(--space-unit) * 2);
   -webkit-box-orient: vertical;
-  color: inherit;
   font-weight: inherit;
   -webkit-line-clamp: 2;
   line-clamp: 2;
   overflow-clip-margin: content-box;
   text-decoration: none;
+}
+
+z-anchor-navigation nav > * a {
+  color: inherit;
 }
 
 z-anchor-navigation nav * a:not(:only-child) {
