--- a/src/components/z-searchbar/styles.css
+++ b/src/components/z-searchbar/styles.css
@@ -43,23 +43,26 @@
   overflow: auto;
   max-height: var(--z-searchbar-results-height, 540px);
   padding: calc(var(--space-unit) / 2) calc(var(--space-unit) * 1.5);
-  scrollbar-color: var(--color-primary01) transparent;
 }
 
 .results::-webkit-scrollbar {
-  width: 10px;
-  background: linear-gradient(to right, transparent 0 3px, var(--gray200) 3px 7px, transparent 7px 10px);
-  border-radius: var(--border-radius);
-}
-
-.results::-webkit-scrollbar-track {
-  background-color: transparent;
+  width: 6px;
+  background: linear-gradient(to right, transparent 0 1px, var(--gray200) 1px 5px, transparent 5px 6px);
 }
 
 .results::-webkit-scrollbar-thumb {
-  width: 10px;
   background-color: var(--color-primary01);
-  border-radius: var(--border-radius);
+}
+
+.results::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-hover-primary);
+}
+
+/* Firefox scrollbar */
+@supports not selector(.results::-webkit-scrollbar-track) {
+  .results {
+    scrollbar-color: var(--color-primary01) transparent;
+  }
 }
 
 .results .category-heading {
