fix: removed fixed widths in the file uploader

--- a/src/components/file-upload/z-dragdrop-area/styles.css
+++ b/src/components/file-upload/z-dragdrop-area/styles.css
@@ -1,8 +1,8 @@
 :host {
   position: relative;
   display: flex;
-  width: 772px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 772px;
   height: 232px;
   flex-direction: column;
   align-items: center;
