--- a/src/components/z-input/styles-textarea.css
+++ b/src/components/z-input/styles-textarea.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   padding: calc(var(--space-unit) * 1.5);
+  background-color: var(--color-form-background);
 }
 
 textarea::-webkit-scrollbar {
