--- a/src/components/z-select/styles.css
+++ b/src/components/z-select/styles.css
@@ -165,3 +165,85 @@
 .reset-item.hide {
   display: none;
 }
+
+z-list-element {
+  position: relative;
+  display: block;
+}
+
+z-list z-list-element::before {
+  position: absolute;
+  z-index: 100;
+  top: 5px;
+  left: -20px;
+  width: 8px;
+  height: 1em;
+  border-bottom: 1px solid var(--color-disabled01-icon);
+  border-left: 1px solid var(--color-disabled01-icon);
+  content: "";
+  cursor: pointer;
+}
+
+z-list z-list-element::after {
+  position: absolute;
+  z-index: 100;
+  top: 5px;
+  left: -20px;
+  width: 8px;
+  height: 100%;
+  border-left: 1px solid var(--color-disabled01-icon);
+  content: "";
+  cursor: pointer;
+}
+
+z-list z-list-element:last-child::after {
+  display: none;
+}
+
+z-list > z-list-element::before,
+z-list > z-list-element::after,
+z-list > z-list-group > z-list-element::before,
+z-list > z-list-group > z-list-element::after {
+  display: none;
+}
+
+z-list > div.children-node {
+  padding-left: calc(var(--space-unit) * 2);
+}
+
+z-list-element > .list-element {
+  display: flex;
+  justify-content: space-between;
+  padding: calc(var(--space-unit) * 1.25) 0;
+  cursor: pointer;
+}
+
+z-list-element > .list-element:focus-visible {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none;
+}
+
+z-list-element > .list-element .item.ellipsis {
+  overflow: hidden;
+}
+
+z-list-element .list-element::after {
+  position: absolute;
+  top: 8px;
+  right: -2px;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
+}
+
+z-list-element .list-element.focused.hovered::after {
+  padding-left: 6px;
+}
+
+z-list-element > .list-element:hover,
+z-list-element > .list-element:hover::after {
+  background-color: var(--color-background);
+  cursor: pointer;
+}
