--- a/src/components/book-card/z-book-card/styles.css
+++ b/src/components/book-card/z-book-card/styles.css
@@ -23,6 +23,7 @@
 }
 
 :host > article .main-content .cover {
+  position: relative;
   display: flex;
   overflow: hidden;
   height: 378px;
@@ -34,6 +35,25 @@
   max-width: 100%;
   max-height: 100%;
   align-self: end;
+}
+
+::slotted([slot="preview"]) {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  width: calc(100% - var(--space-unit) * 2);
+  flex-direction: column;
+  justify-content: center;
+  padding: var(--space-unit);
+  background-color: var(--avatar-C19);
+  color: var(--color-white);
+  gap: calc(var(--space-unit) / 4);
+  text-align: center;
+}
+
+:host > article .main-content .cover ::slotted([slot="preview"]) {
+  min-height: 80px;
+  max-height: 336px;
 }
 
 :host > article .main-content .card-info {
@@ -214,6 +234,11 @@
   width: 221px;
   height: auto;
   margin: 0;
+}
+
+:host > article .landscape .main-content .cover ::slotted([slot="preview"]) {
+  min-height: 80px;
+  max-height: 256px;
 }
 
 :host > article.landscape .main-content .card-info .book-data {
