--- a/src/components/z-select/styles.css
+++ b/src/components/z-select/styles.css
@@ -247,6 +247,17 @@ z-list-element .list-element::after {
   transform: translateX(-100%);
 }
 
+z-list-element.grouped-tree-parent-node .list-element::after {
+  position: absolute;
+  top: 8px;
+  right: -25px;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
+}
+
 z-list-element .list-element.focused.hovered::after {
   padding-left: 6px;
 }
@@ -273,4 +284,33 @@ z-list-element:focus {
   max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+z-list-element > .list-element:hover {
+  background-color: var(--color-background);
+  cursor: pointer;
+}
+
+z-list-element.grouped-tree-parent-node > .list-element:hover::after {
+  position: absolute;
+  z-index: -1;
+  top: 8px;
+  right: -15px;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
+}
+
+z-list-element > .list-element:hover::after {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
 }
